<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1">

        <LinearLayout
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp">

            <Button
                android:id="@+id/load_button_load"
                android:text="@string/load_button_load"
                android:layout_marginRight="5sp"
                android:background="@color/colorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/load_button_delete"
                android:text="@string/load_button_delete"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"
                android:background="@color/colorOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/load_button_cancel"
                android:text="@string/load_button_cancel"
                android:layout_marginLeft="5sp"
                android:background="@color/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ListView
            android:id="@+id/load_list_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:listSelector="@color/colorBlue"
            android:background="@color/colorG8">
        </ListView>

    </GridLayout>

</LinearLayout>